--- a/source/layout.haml
+++ b/source/layout.haml
@@ -13,45 +13,6 @@
 
   %body
     .row
-      .small-13.columns.show-for-small
-        %p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-    .contain-to-grid.sticky
-      %nav.top-bar.show-for-small
-        %ul.title-area
-          / Title Area
-          %li.name
-            %h1
-              %a{:href =>"/"}
-                JRubyConf EU
-          / Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone
-          %li.toggle-topbar.menu-icon
-            %a{:href => "#"}
-              %span
-        %section.top-bar-section
-          / Left Nav Section
-          %ul.left
-            %li
-              = link_to 'Section', '#'
-            %li.divider
-            %li
-              = link_to 'Section', '#'
-            %li.divider
-            %li
-              = link_to 'Section', '#'
-            %li.divider
-            %ul.button-group
-              %li
-                %a.small.button{:href => "#"} Button 1
-              %li
-                %a.small.button{:href => "#"} Button 2
-
-    .row
       .small-13.large-1.columns.hide-for-small
         %p &nbsp;
       = yield.force_encoding('UTF-8')
@@ -66,14 +27,14 @@
     .row.bottom.hide-for-small
       .large-4.large-offset-1.columns.black
         %dl.sub-nav
-          %dd= link_to 'Link'  '#'
-          %dd= link_to 'Link', '#'
-          %dd= link_to 'Link', '#'
+          %dd &nbsp;
+          %dd &nbsp;
+          %dd &nbsp;
       .large-4.columns.black
         %dl.sub-nav
           %dd
             %a{:href =>"/"}
-              english
+              &nbsp;
       .large-4.columns.black
         %dl.sub-nav
           %dd
