--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,57 +1,15 @@
 - content_for :title do
   %title
-    JRubyConf EU
+    JRuby Conf EU
 
-.small-13.large-1.columns
-  .back.hide-for-small
-    .vertical
-      %h1
-        = link_to "#" do
-          Section
-  .horizontal.show-for-small
-    %h1
-      = link_to "#" do
-        Section
+.small-13.large-4.columns
+  %h1
+    tickets
 
-.small-13.large-3.columns.text
-  .sign
-    %p &nbsp;
-  .sign
-    = link_to "#" do
-      ✚
-.small-13.large-1.columns
-  .back.hide-for-small
-    .vertical
-      %h1
-        = link_to "#" do
-          Section
-  .horizontal.show-for-small
-    %h1
-      = link_to "#" do
-        Section
+.small-13.large-4.columns
+  %h1
+    dates & venue
 
-
-.small-13.large-3.columns.text
-  .sign
-    %p &nbsp;
-  .projects
-  .sign
-    = link_to "#" do
-      ✚
-.small-13.large-1.columns
-  .back.hide-for-small
-    .vertical
-      %h1
-        = link_to "#" do
-          Section
-  .horizontal.show-for-small
-    %h1
-      = link_to "#" do
-        Section
-
-.small-13.large-3.columns.text
-  .sign
-    %p &nbsp;
-  %h1 Work in progress
-  %i.foundicon-search text
-  %p I am working on it...
+.small-13.large-4.columns
+  %h1
+    speakers (cfp)
