--- a/source/layout.haml
+++ b/source/layout.haml
@@ -5,8 +5,8 @@
     %meta{:charset=>"utf-8"}
     %meta{:content=>"IE=edge,chrome=1", :'http-equiv'=>"X-UA-Compatible"}
     %link{:rel=>"icon", :type=>"image/png", :href=>"favicon.png"}
-    <script type="text/javascript" src="http://use.typekit.com/cla2fqo.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    //<script type="text/javascript" src="http://use.typekit.com/cla2fqo.js"></script>
+    //<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     = stylesheet_link_tag 'normalize', 'style'
     = yield_content :title
     <script src="/js/custom.modernizr.js"></script>
