clean settings scss

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -12,6 +12,7 @@
     <script src="/js/custom.modernizr.js"></script>
 
   %body
+    //content
     .row
       .small-13.large-1.columns.hide-for-small
         %p &nbsp;
@@ -20,10 +21,14 @@
       .small-13.large-13.columns
         %p &nbsp;
         %p &nbsp;
+
+    //home
     .home.hide-for-small
       %h1
         %a{:href =>"/"}
           JRubyConf EU
+
+    //navigation
     .row.bottom.hide-for-small
       .large-4.large-offset-1.columns.black
         %dl.sub-nav
