--- a/source/stylesheets/partials/_settings.scss
+++ b/source/stylesheets/partials/_settings.scss
@@ -21,7 +21,7 @@ $white: #FAFAFA;
 // We use these to control various global styles
 // $body-bg: #fff;
 // $body-font-color: #222;
-$body-font-family: "proxima-nova", "Helvetica", Helvetica, Arial, sans-serif;
+// $body-font-family: "proxima-nova", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
