--- a/source/stylesheets/partials/_settings.scss
+++ b/source/stylesheets/partials/_settings.scss
@@ -75,8 +75,8 @@ $total-columns: 13;
 //
 
 // We use these to control header font styles
-$header-font-family: "proxima-nova", "Helvetica", Helvetica, Arial, sans-serif;
-$header-font-weight: 700;
+// $header-font-family: "proxima-nova", "Helvetica", Helvetica, Arial, sans-serif;
+// $header-font-weight: 700;
 // $header-font-style: normal;
 // $header-font-color: #222;
 // $header-line-height: 1.4;
@@ -109,14 +109,14 @@ $h6-font-size: .7em;
 
 // A general <small> styling
 // $small-font-size: 60%;
-$small-font-size: 45%;
+// $small-font-size: 45%;
 // $small-font-color: lighten($header-font-color, 30%);
-$small-font-color: $white;
+// $small-font-color: $white;
 
 // We use these to style paragraphs
 // $paragraph-font-family: inherit;
 // $paragraph-font-weight: normal;
-$paragraph-font-size: .9em;
+// $paragraph-font-size: .9em;
 // $paragraph-line-height: 1.6;
 // $paragraph-margin-bottom: emCalc(20px);
 // $paragraph-aside-font-size: emCalc(14px);
