--- a/source/layout.haml
+++ b/source/layout.haml
@@ -24,9 +24,11 @@
 
     //home
     .home.hide-for-small
-      %h1
-        %a{:href =>"/"}
-          JRubyConf EU
+      %a{:href =>"/"}
+        %img{:src=>'/images/jrubyconf_logo_ver.png'}
+      //%h1
+      //  %a{:href =>"/"}
+      //    JRubyConf EU
 
     //navigation
     .row.bottom.hide-for-small
