Move Foundation Icon SCSS into correct places
* Fix font path references in stylesheets.

Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -7,7 +7,7 @@
     %link{:rel=>"icon", :type=>"image/png", :href=>"favicon.png"}
     //<script type="text/javascript" src="http://use.typekit.com/cla2fqo.js"></script>
     //<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-    = stylesheet_link_tag 'normalize', 'style'
+    = stylesheet_link_tag 'normalize', 'style', 'general_foundicons'
     = yield_content :title
     <script src="/js/custom.modernizr.js"></script>
 
