--- a/source/stylesheets/partials/_settings.scss
+++ b/source/stylesheets/partials/_settings.scss
@@ -4,6 +4,35 @@
 $black: #0A0A0A;
 $white: #FAFAFA;
 
+// Setting for Foundation Icons
+$fontFileName: "../fonts/general_foundicons";
+$fontName: "GeneralFoundicons";
+$classPrefix: "foundicon-";
+
+@mixin i-class($name,$pua) {
+  .#{$classPrefix}#{$name}:before {
+    content: "\f#{$pua}";
+  }
+}
+
+@mixin ie-class($name,$pua) {
+  .#{$classPrefix}#{$name} {
+    *zoom: expression( this.runtimeStyle['zoom'] = "1", this.innerHTML = "&#xf#{$pua};");
+  }
+}
+
+@mixin face {
+  @font-face {
+    font-family: $fontName;
+    src: url('fonts/#{$fontFileName}.eot');
+    src: url('fonts/#{$fontFileName}.eot?#iefix') format('embedded-opentype'),
+         url('fonts/#{$fontFileName}.woff') format('woff'),
+         url('fonts/#{$fontFileName}.ttf') format('truetype'),
+         url('fonts/#{$fontFileName}.svg##{$fontName}') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
+}
 
 // Settings file to override Foundation variables
 
