--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,11 +5,17 @@
 .small-13.large-4.columns
   %h1
     tickets
+  %i.foundicon-cart
 
 .small-13.large-4.columns
   %h1
-    dates & venue
+    dates
+  %i.foundicon-calendar
+  %h1
+    venue
+  %i.foundicon-location
 
 .small-13.large-4.columns
   %h1
     speakers (cfp)
+  %i.foundicon-mic
