--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -1,3 +1,47 @@
+@font-face {
+  font-family: 'sonarbold';
+  src: url('http://assets.eurucamp.org/fonts/sonar-bold-webfont.eot');
+  src: url('http://assets.eurucamp.org/fonts/sonar-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('http://assets.eurucamp.org/fonts/sonar-bold-webfont.woff') format('woff'),
+  url('http://assets.eurucamp.org/fonts/sonar-bold-webfont.ttf') format('truetype'),
+  url('http://assets.eurucamp.org/fonts/sonar-bold-webfont.svg#sonarbold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'sonarnormal';
+  src: url('http://assets.eurucamp.org/fonts/sonar-normal-webfont.eot');
+  src: url('http://assets.eurucamp.org/fonts/sonar-normal-webfont.eot?#iefix') format('embedded-opentype'),
+  url('http://assets.eurucamp.org/fonts/sonar-normal-webfont.woff') format('woff'),
+  url('http://assets.eurucamp.org/fonts/sonar-normal-webfont.ttf') format('truetype'),
+  url('http://assets.eurucamp.org/fonts/sonar-normal-webfont.svg#sonarnormal') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'sonarmedium';
+  src: url('http://assets.eurucamp.org/fonts/sonar-medium-webfont.eot');
+  src: url('http://assets.eurucamp.org/fonts/sonar-medium-webfont.eot?#iefix') format('embedded-opentype'),
+  url('http://assets.eurucamp.org/fonts/sonar-medium-webfont.woff') format('woff'),
+  url('http://assets.eurucamp.org/fonts/sonar-medium-webfont.ttf') format('truetype'),
+  url('http://assets.eurucamp.org/fonts/sonar-medium-webfont.svg#sonarmedium') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+.content{
+  text-align: center;
+  i{
+    font-size: 10em;
+  }
+  h1{
+    font-family: 'sonarnormal';
+  }
+}
+
 a {
   padding: 0.1em;
   font-weight: 700;
