--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -38,7 +38,13 @@
     font-size: 10em;
   }
   h1{
-    font-family: 'sonarnormal';
+    font-family: 'sonarnormal', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: .5em;
+  }
+  p{
+    text-align: left;
+    font-family: "ff-tisa-web-pro", serif;
   }
 }
 
