--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,16 +6,39 @@
   %h1
     tickets
   %i.foundicon-cart
+  %p
+    Early-bird tickets for JRubyConf EU and eurucamp are now available from
+    = succeed '.' do
+      = link_to 'tickets.eurucamp.org', 'http://tickets.eurucamp.org/'
 
 .small-13.large-4.columns
   %h1
     dates
   %i.foundicon-calendar
+  %h2 14 - 15 August 2013
+  %p
+    After its first successful European excursion in 2013, JRubyConf is back,
+    bigger and better – this year as a two-day, single track conference.
+  %p
+    JRubyConf will take place on
+    <strong>Wednesday 14 and Thursday 15 August</strong> and form part of the
+    = link_to 'eurucamp week', 'http://2013.eurucamp.org'
+    of Ruby events.
+
   %h1
     venue
   %i.foundicon-location
+  %h2 Back to Berlin
+  %p
+    JRubyConf returns to back in Germany's vibrant capital, Berlin. JRubyConf
+    will take place in a beautiful downtown location.
 
 .small-13.large-4.columns
   %h1
     speakers (cfp)
   %i.foundicon-mic
+  %h2 Be part of it
+  %p
+    Our Call For Proposals (CFP) is now open at
+    = succeed '.' do
+      = link_to 'cfp.eurucamp.org', 'http://cfp.eurucamp.org/'
