--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -30,12 +30,12 @@
   %i.foundicon-location
   %h2 Back to Berlin
   %p
-    JRubyConf returns to back in Germany's vibrant capital, Berlin. JRubyConf
+    JRubyConf returns to Germany’s vibrant capital, Berlin. JRubyConf
     will take place in a beautiful downtown location.
 
 .small-13.large-4.columns
   %h1
-    speakers (cfp)
+    speakers
   %i.foundicon-mic
   %h2 Be part of it
   %p
