--- a/source/stylesheets/partials/_colours.scss
+++ b/source/stylesheets/partials/_colours.scss
@@ -11,9 +11,16 @@ body{
   h1{
     color: $white;
   }
-  p{
-    //background-color: $white;
-
+  a{
+    //color: $red;
+    color: rgba(209,0,35,0.7);
+    &:hover{
+      color: rgba(209,0,35,1);
+      background-color: rgba(239,239,239,0.5);
+    }
+  }
+  h2{
+    background-color: rgba(239,239,239,0.5);
   }
 }
 
@@ -21,14 +28,3 @@ body{
   background-image: url('/images/vert.png');
 }
 
-.bottom a {
-  color: white;
-  &:visited, &:active {
-    color: white; }
-  &:hover {
-    background: white;
-    color: $black; } }
-
-.projects a:hover {
-  background: white;
-  color: $black; }
