--- a/source/stylesheets/partials/_settings.scss
+++ b/source/stylesheets/partials/_settings.scss
@@ -8,7 +8,7 @@ $gray2: #333333;
 $gray3: #444444;
 $gray4: #555555;
 $gray5: #DDDDDD;
-$white: #EFEFEF;
+$white: #FFFFFF;
 $red:   #D10023;
 
 // Setting for Foundation Icons
