--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -48,7 +48,11 @@
     padding-left: 50px;
     padding-right: 50px;
   }
+  h1{
+    font-size: 1.5em;
+  }
   h2{
+    font-size: 1.2em;
     padding: .1em 0 .1em 0;
   }
   a{
