Link social media sites
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -41,13 +41,17 @@
       .small-13.large-12.large-offset-1.columns.black
         %dl.sub-nav
           %dd
-            %img{:src=>'/images/twitter_icon.png'}
+            %a(href="https://twitter.com/jrubyconfeu" title="JRubyConf EU on Twitter")
+              %img{:src=>'/images/twitter_icon.png'}
           %dd
-            %img{:src=>'/images/lanyrd_icon.png'}
+            %a(href="http://lanyrd.com/2013/jrubyconf" title="JRubyConf EU on Lanyrd")
+              %img{:src=>'/images/lanyrd_icon.png'}
           %dd
-            %img{:src=>'/images/facebook_icon.png'}
+            %a(href="https://www.facebook.com/jrubyconfeu" title="JRubyConf EU on Facebook")
+              %img{:src=>'/images/facebook_icon.png'}
           %dd
-            %img{:src=>'/images/jruby_logo.png'}
+            %a(href="http://jruby.org" title="JRuby")
+              %img{:src=>'/images/jruby_logo.png'}
 
 
 
