Add temp. text until tickets, CFP open
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,6 +7,11 @@
     tickets
   %i.foundicon-cart
   %p
+    Early-bird tickets for JRubyConf EU and eurucamp will be available from
+    Monday 8 April, 6pm CEST. Check back here on Monday or
+    = link_to 'follow us on Twitter', 'https://twitter.com/jrubyconfeu'
+    for the registration link.
+  -#%p
     Early-bird tickets for JRubyConf EU and eurucamp are now available from
     = succeed '.' do
       = link_to 'tickets.eurucamp.org', 'http://tickets.eurucamp.org/'
@@ -17,7 +22,7 @@
   %i.foundicon-calendar
   %h2 14 - 15 August 2013
   %p
-    After its first successful European excursion in 2013, JRubyConf is back,
+    After a first successful European excursion in 2012, JRubyConf is back,
     bigger and better – this year as a two-day, single track conference.
   %p
     JRubyConf will take place on
@@ -30,8 +35,8 @@
   %i.foundicon-location
   %h2 Back to Berlin
   %p
-    JRubyConf returns to Germany’s vibrant capital, Berlin. JRubyConf
-    will take place in a beautiful downtown location.
+    JRubyConf returns to Germany’s vibrant capital, Berlin. Our striking
+    downtown location will be announced shortly.
 
 .small-13.large-4.columns
   %h1
@@ -39,6 +44,9 @@
   %i.foundicon-mic
   %h2 Be part of it
   %p
+    Our Call For Proposals (CFP) opens next week (week beginning 8 April).
+    Get your thinking caps on!
+  -#%p
     Our Call For Proposals (CFP) is now open at
     = succeed '.' do
       = link_to 'cfp.eurucamp.org', 'http://cfp.eurucamp.org/'
