Add missing Meta Viewport tag
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -4,6 +4,7 @@
   %head
     %meta{:charset=>"utf-8"}
     %meta{:content=>"IE=edge,chrome=1", :'http-equiv'=>"X-UA-Compatible"}
+    %meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport")
     %link{:rel=>"icon", :type=>"image/png", :href=>"favicon.png"}
     <script type="text/javascript" src="//use.typekit.net/vwi8wfs.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
