Add an empty paragraph after CFP section
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -46,6 +46,8 @@
   %p
     Our Call For Proposals (CFP) opens next week (week beginning 8 April).
     Get your thinking caps on!
+  %p
+    &nbsp;
   -#%p
     Our Call For Proposals (CFP) is now open at
     = succeed '.' do
