some space in the end to improve ophone view

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -54,3 +54,9 @@
     Our Call For Proposals (CFP) is now open at
     = succeed '.' do
       = link_to 'cfp.eurucamp.org', 'http://cfp.eurucamp.org/'
+  %p
+    &nbsp;
+  %p
+    &nbsp;
+  %p
+    &nbsp;
