--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -33,7 +33,7 @@
   %i.foundicon-cart
   %p
     Early-bird tickets for JRubyConf EU and eurucamp will be available from
-    Wednesday 10 April, 10am CEST. Check back here on Monday or
+    Wednesday 10 April, 10am CEST. Check back here or
     = link_to 'follow us on Twitter', 'https://twitter.com/jrubyconfeu'
     for the registration link.
   -#%p
