Update current week in CFP text
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -46,7 +46,7 @@
   %i.foundicon-mic
   %h2 Be part of it
   %p
-    Our Call For Proposals (CFP) opens next week (week beginning 8 April).
+    Our Call For Proposals (CFP) opens later this week (week beginning 8 April).
     Get your thinking caps on!
   %p
     &nbsp;
