--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -32,14 +32,9 @@
     tickets
   %i.foundicon-cart
   %p
-    Early-bird tickets for JRubyConf EU and eurucamp will be available from
-    Wednesday 10 April, 10am CEST. Check back here or
-    = link_to 'follow us on Twitter', 'https://twitter.com/jrubyconfeu'
-    for the registration link.
-  -#%p
     Early-bird tickets for JRubyConf EU and eurucamp are now available from
     = succeed '.' do
-      = link_to 'tickets.eurucamp.org', 'http://tickets.eurucamp.org/'
+      = link_to 'tickets.jrubyconf.eu', 'http://tickets.jrubyconf.eu/'
 
   %h1
     speakers
