--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -1,35 +1,27 @@
-!!!5
-/[if lt IE 7] <html class="no-js lt-ie9 lt-ie8 lt-ie7">
-/[if IE 7] <html class="no-js lt-ie9 lt-ie8">
-/[if IE 8] <html class="no-js lt-ie9">
-%html.no-js
+!!! 5
+- ie_html :lang => 'en', :class => 'no-js' do
   %head
     %meta(charset="utf-8")
     %meta(content="IE=edge,chrome=1" http-equiv="X-UA-Compatible")
     %title= current_page.data.title
     %meta(content="" name="description")
-    %meta(content="width=device-width" name="viewport")
+    %meta(content="" name="author")
+    %meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport")
+
+    %link(href="favicon.ico" rel="shortcut icon")
+    %link(href="apple-touch-icon-57x57-precomposed.png" rel="apple-touch-icon")
+    %link(href="apple-touch-icon-72x72-precomposed.png" sizes="72x72" rel="apple-touch-icon")
+    %link(href="apple-touch-icon-114x114-precomposed.png" sizes="114x114" rel="apple-touch-icon")
  
     = javascript_include_tag "vendor/modernizr-2.6.1.min"
     = stylesheet_link_tag "site"
     
+    = partial 'partials/analytics'
+    
   %body
-    /[if lt IE 7] <p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p>
-    
-    %header
-      Header
-    %div(role="main" class="main")
-      = yield
-    %footer
-      Footer
-    
-    = javascript_include_tag "//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"
-    :javascript
-      window.jQuery || document.write('<script src="javascripts/vendor/jquery-1.8.0.min.js"><\/script>')
-    = javascript_include_tag "site"
-    
-    :javascript
-      var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-      g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-      s.parentNode.insertBefore(g,s))(document,'script'));
+    #container
+      = partial 'partials/header'
+      #main(role="main")
+        = yield
+      = partial 'partials/footer'
+      = partial 'partials/scripts'
