--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -22,7 +22,7 @@
 
     = partial 'partials/analytics'
 
-  %body
+  %body#top
     #container
       = partial 'partials/header'
       #main(role="main")
