--- a/source/stylesheets/_utils.sass
+++ b/source/stylesheets/_utils.sass
@@ -34,4 +34,9 @@
   +prefixer(filter, grayscale(100%))
 
 =no-greyscale
-  +prefixer(filter, grayscale(0%
+  +prefixer(filter, grayscale(0%))
+
+=unlisted
+  list-style: none
+  margin: 0
+  padding: 0
