Fixing broken border style on hover.

--- a/source/stylesheets/partials/_navigation.sass
+++ b/source/stylesheets/partials/_navigation.sass
@@ -29,8 +29,8 @@
 
       &:hover
         +transition(all 0.15s)
-        border-style: solid
-        border-color: $red
+        border-bottom-style: solid
+        border-bottom-color: $red
         background: $red
         color: $white
 
