Implementing lift with fancy animations.

--- a/source/stylesheets/_utils.sass
+++ b/source/stylesheets/_utils.sass
@@ -40,3 +40,25 @@
   list-style: none
   margin: 0
   padding: 0
+
+=background-size-cover($image)
+  background: url($image) no-repeat center center
+  background-size: cover
+  filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='#{$image}', sizingMethod='scale')
+  -ms-filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='#{$image}', sizingMethod='scale')
+
+=animate($type, $duration: 1s, $delay: 0)
+  +animated
+  +prefixer(animation-duration, $duration, webkit moz ms o spec)
+  +prefixer(animation-delay, $delay, webkit moz ms o spec)
+  // can't seem to call dynamic mixin names
+  @if $type == fade-in
+    +fade-in
+  @else if $type == fade-in-right
+    +fade-in-right
+  @else if $type == fade-in-left
+    +fade-in-left
+  @else if $type == flip-in-y
+    +flip-in-y
+  @else if $type == flip-in-x
+    +flip-in-x
