--- a/source/stylesheets/partials/_navigation.sass
+++ b/source/stylesheets/partials/_navigation.sass
@@ -30,8 +30,8 @@ nav.navigation
       &:hover
         +transition(all 0.15s)
         border-bottom-style: solid
-        border-bottom-color: $red
-        background: $red
+        border-bottom-color: $lighter-red
+        background: $lighter-red
         color: $white
 
 
@@ -52,7 +52,7 @@ nav.navigation
         &:hover
           background: none
           border: none
-          color: $red
+          color: $lighter-red
 
 
 // navigation in footer, only used on small sizes and
