--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -7,3 +7,11 @@
       Jump to navigation
 
   = partial "partials/navigation"
+
+  .lift
+    = image_tag "header/lift_logo@2x.png", :alt => "JRubyConf Icon"
+    %h2
+      %strong JRubyConf is back
+      %span in europe
+    %p
+      August 14 & 15, 2013 in Berlin
