--- a/source/stylesheets/_fonts.sass
+++ b/source/stylesheets/_fonts.sass
@@ -1,6 +1,8 @@
 =custom-sans($weight: normal)
   font-family: "proxima-nova", Helvetica, Arial, sans-serif
-  @if $weight == light
+  @if $weight == thin
+    font-weight: 100
+  @else if $weight == light
     font-weight: 300
   @else if $weight == bold
     font-weight: 700
