--- a/source/partials/_tickets.html.haml
+++ b/source/partials/_tickets.html.haml
@@ -1,1 +1,5 @@
-%h1 Tickets partial
+%p
+  %span= data.intro
+  %span.extension= data.intro_extension
+%a.button(href="#{data.link}" title="#{data.link_title}")
+  = data.link_text
