--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -4,8 +4,10 @@
 @import "settings";
 
 @import "fonts";
-@import "base";
 @import "utils";
+@import "base";
 
 @import "partials/header";
 @import "partials/navigation";
+
+@import "partials/tickets";
