Moving logo into shared folder.

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -1,7 +1,7 @@
 %header#header
   .wrapper
     %h1
-      = image_tag "header/logo@2x.png", :alt => "JRubyConf.eu"
+      = image_tag "shared/logo@2x.png", :alt => "JRubyConf.eu"
 
     %a.navigation-toggle(href="#footer" title="Jump to the navigation")
       Jump to navigation
@@ -9,7 +9,7 @@
   = partial "partials/navigation"
 
   .lift
-    = image_tag "header/lift_logo@2x.png", :alt => "JRubyConf Icon"
+    = image_tag "shared/lift_logo@2x.png", :alt => "JRubyConf Icon"
     %h2
       %strong JRubyConf is back
       %span in europe
