Fixing accidentally changed image path.

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -9,7 +9,7 @@
   = partial "partials/navigation"
 
   .lift
-    = image_tag "shared/lift_logo@2x.png", :alt => "JRubyConf Icon"
+    = image_tag "header/lift_logo@2x.png", :alt => "JRubyConf Icon"
     %h2
       %strong JRubyConf is back
       %span in europe
