--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -8,6 +8,7 @@
 @import "base";
 
 @import "partials/header";
+@import "partials/footer";
 @import "partials/navigation";
 
 @import "partials/tickets";
