Changing fonts, adding more character.

--- a/source/stylesheets/_fonts.sass
+++ b/source/stylesheets/_fonts.sass
@@ -1,5 +1,5 @@
 =custom-sans($weight: normal)
-  font-family: "proxima-nova", Helvetica, Arial, sans-serif
+  font-family: "omnes-pro", Helvetica, Arial, sans-serif
   @if $weight == thin
     font-weight: 100
   @else if $weight == light
@@ -12,7 +12,7 @@
     font-weight: 400
 
 =custom-serif($weight: normal, $style: normal)
-  font-family: "chaparral-pro", Georgia, serif
+  font-family: "freight-text-pro", Georgia, serif
   @if $weight == bold
     font-weight: 700
   @else if $weight == light
