--- a/source/stylesheets/partials/_footer.sass
+++ b/source/stylesheets/partials/_footer.sass
@@ -11,17 +11,16 @@
 
   .signature
     margin: 1em 0
+    +custom-serif(light)
     color: $extra-light-gray
 
     img
       vertical-align: middle
-      //margin: 0 30px
       display: block
       margin: 0.5em auto
 
       &.jrubyconf-logo
         width: 120px
-        //margin-left: -22px
 
       &.jruby-logo
         width: 67px
