--- a/source/stylesheets/partials/_header.sass
+++ b/source/stylesheets/partials/_header.sass
@@ -52,7 +52,7 @@
       text-align: center
       color: $white
 
-      padding: 2em 0
+      padding: 2.5em 0
       +background-size-cover('/images/header/lift_bg.jpg')
 
       img
@@ -81,7 +81,7 @@
           +animate(fade-in-right, 1s, 1s)
 
       p
-        +custom-sans(thin)
+        +custom-sans(light)
         margin: 2em 0 0em
         letter-spacing: 0.06em
         +animate(fade-in, 3s)
