--- a/source/stylesheets/partials/_tickets.sass
+++ b/source/stylesheets/partials/_tickets.sass
@@ -32,6 +32,7 @@
   +respond-to(tablet-lite)
     background: none
     +custom-sans(regular)
+    margin-bottom: 1em
 
     .wrapper
       margin-top: 3em
