--- a/source/stylesheets/partials/_speakers.sass
+++ b/source/stylesheets/partials/_speakers.sass
@@ -48,6 +48,7 @@
       +custom-sans(bold)
       color: $lighter-red
       font-size: 0.825em
+      vertical-align: baseline
       +transition(all 0.25s)
 
       &:hover
