--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -73,7 +73,7 @@ section
       content: "."
       text-indent: -999em
       display: block
-      margin: 1.5em auto
+      margin: 0.5em auto 1.5em
       width: 100px
       height: 1px
       border-bottom: 1px solid $light-gray
