Linking social media.

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -11,13 +11,17 @@
     %nav.social
       %ul
         %li
-          %a.twitter(href="") Twitter
+          %a.twitter(href="https://twitter.com/jrubyconfeu" title="Visit JRubyConf.eu on Twitter")
+            Twitter
         %li
-          %a.facebook(href="") Facebook
+          %a.facebook(href="https://www.facebook.com/jrubyconfeu" title="Visit JRubyConf.eu on Facebook")
+            Facebook
         %li
-          %a.google-plus(href="") Google +
+          %a.google-plus(href="https://plus.google.com/114984140580239329274" title="Visit Eurucamp on Google +")
+            Google +
         %li
-          %a.github(href="") Github
+          %a.github(href="https://github.com/eurucamp" title="Visit Eurucamp on Github")
+            Github
 
     %nav.secondary-navigation
       %ul
