Ensure link to anchor also on sub pages.

--- a/source/partials/_navigation.html.haml
+++ b/source/partials/_navigation.html.haml
@@ -3,5 +3,5 @@
     - data.sections.each do |section|
       %li
         - title = data.to_h[section][:nav_title] || data.to_h[section][:title]
-        %a(href="##{section}" title="Jump to #{title}")
+        %a(href="/##{section}" title="Jump to #{title}")
           = title
