Adding sonar web font for lift headline.

--- a/source/stylesheets/_fonts.sass
+++ b/source/stylesheets/_fonts.sass
@@ -1,3 +1,5 @@
++font-face(Sonar, '/fonts/sonar-bold-webfont', bold)
+
 =custom-sans($weight: normal)
   font-family: "omnes-pro", Helvetica, Arial, sans-serif
   @if $weight == thin
