--- a/source/stylesheets/partials/_footer.sass
+++ b/source/stylesheets/partials/_footer.sass
@@ -1,6 +1,7 @@
 #footer
   background: $black url("/images/footer/logo_symbol.png") no-repeat right top
   background-size: auto 100%
+  margin-top: 2em
   height: 200px
   text-align: center
   color: $white
@@ -101,6 +102,7 @@
 
   +respond-to(tablet-lite)
     height: 260px
+    margin-top: 4em
 
     .signature
       margin: 2em 0 3em
