--- a/source/stylesheets/partials/_header.sass
+++ b/source/stylesheets/partials/_header.sass
@@ -51,7 +51,6 @@
       display: block
       text-align: center
       color: $white
-
       padding: 2.5em 0
       +background-size-cover('/images/header/lift_bg.jpg')
 
@@ -77,7 +76,8 @@
           display: block
           font-size: 1.0125em
           text-shadow: 0 0 2em $darker-red
-          +custom-sans(black)
+          font-family: Sonar
+          letter-spacing: -0.025em
           +animate(fade-in-right, 1s, 1s)
 
       p
