--- a/source/stylesheets/partials/_tickets.sass
+++ b/source/stylesheets/partials/_tickets.sass
@@ -50,6 +50,7 @@
       margin: 1em 0 0
       background: $lighter-red
       color: $white
+      text-shadow: 0 -1px 0 transparentize($red, 0.5)
 
       &:hover
         background: $red
