--- a/source/stylesheets/partials/_venue.sass
+++ b/source/stylesheets/partials/_venue.sass
@@ -17,8 +17,8 @@
       height: 100%
       border-top: 1px solid $white
       position: absolute
-      top: 0
-      left: 0
+      top: 0.4px
+      left: 0.4px
       z-index: 9999
 
     img
