Remove border for larger sizes.

--- a/source/stylesheets/partials/_venue.sass
+++ b/source/stylesheets/partials/_venue.sass
@@ -81,6 +81,10 @@
         height: 100%
         width: auto
 
+      &:after
+        border-top: none
+        border-left: 1px solid $white
+
       &.description
         float: left
         margin-top: 1em
