Adding jrubyconf 2012 link to footer. Closes #16.

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -34,3 +34,6 @@
         %li
           %a(href="http://2013.eurucamp.org/team.html" title="Jump to eurucamp.org for our team")
             Team
+        %li
+          %a(href="http://2012.jrubyconf.eu" title="Last year's JRubyConf.eu")
+            JRubyConf 2012
