--- a/source/stylesheets/partials/_footer.sass
+++ b/source/stylesheets/partials/_footer.sass
@@ -2,7 +2,7 @@
   background: $black url("/images/footer/logo_symbol.png") no-repeat right top
   background-size: auto 100%
   margin-top: 2em
-  height: 200px
+  height: 220px
   text-align: center
   color: $white
   +clearfix
@@ -60,9 +60,10 @@
 
     ul
       +unlisted
+      margin: 0 20px
 
       li
-        display: inline
+        display: inline-block
         +custom-sans
         font-size: 0.85em
 
@@ -70,6 +71,7 @@
         color: $light-gray
         padding: 0 10px
         +transition(all 0.15s)
+        white-space: nowrap
 
         &:hover
           color: $white
