--- a/source/partials/_navigation.html.haml
+++ b/source/partials/_navigation.html.haml
@@ -5,3 +5,6 @@
         - title = data.to_h[section][:nav_title] || data.to_h[section][:title]
         %a(href="/##{section}" title="Jump to #{title}")
           = title
+    %li
+      %a(href="http://blog.eurucamp.org/" title="Joined blog at eurucamp.org")
+        Blog
