--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,10 +8,12 @@
     %meta(content="" name="author")
     %meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport")
 
-    %link(href="favicon.ico" rel="shortcut icon")
-    %link(href="apple-touch-icon-57x57-precomposed.png" rel="apple-touch-icon")
-    %link(href="apple-touch-icon-72x72-precomposed.png" sizes="72x72" rel="apple-touch-icon")
-    %link(href="apple-touch-icon-114x114-precomposed.png" sizes="114x114" rel="apple-touch-icon")
+    %link(rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png")
+    %link(rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png")
+    %link(rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png")
+    %link(rel="apple-touch-icon" href="apple-touch-icon-precomposed.png")
+    %link(rel="shortcut icon" href="favicon.png")
+    %link(rel="icon" type="image/ico" href="favicon.ico")
 
     = javascript_include_tag "vendor/modernizr-2.6.1.min"
     = stylesheet_link_tag "site"
