Removing G+, adding Lanyrd link to footer. Closes #14.

--- a/source/stylesheets/partials/_footer.sass
+++ b/source/stylesheets/partials/_footer.sass
@@ -46,7 +46,7 @@
           background-size: 160px 80px
 
         $x: 0px
-        @each $item in twitter, facebook, google-plus, github
+        @each $item in twitter, facebook, github, lanyrd
           &.#{$item}
             background-position: $x 0
             $x: $x - 40px
