--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -17,11 +17,12 @@
           %a.facebook(href="https://www.facebook.com/jrubyconfeu" title="Visit JRubyConf.eu on Facebook")
             Facebook
         %li
-          %a.google-plus(href="https://plus.google.com/114984140580239329274" title="Visit Eurucamp on Google +")
-            Google +
-        %li
           %a.github(href="https://github.com/eurucamp" title="Visit Eurucamp on Github")
             Github
+        %li
+          %a.lanyrd(href="http://lanyrd.com/2013/jrubyconf/" title="Jrubyconf at Lanyrd")
+            Lanyrd
+
 
     %nav.secondary-navigation
       %ul
