Use en-GB date formats
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/partials/_header.html.haml
+++ b/source/partials/_header.html.haml
@@ -14,4 +14,4 @@
       %strong JRubyConf is back
       %span in europe
     %p
-      August 14 & 15, 2013 in Berlin
+      14 & 15 August 2013 in Berlin
