Fix capitalisation of JRubyConf for sake of consistency
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -20,7 +20,7 @@
           %a.github(href="https://github.com/eurucamp" title="Visit Eurucamp on Github")
             Github
         %li
-          %a.lanyrd(href="http://lanyrd.com/2013/jrubyconf/" title="Jrubyconf at Lanyrd")
+          %a.lanyrd(href="http://lanyrd.com/2013/jrubyconf/" title="JRubyConf at Lanyrd")
             Lanyrd
 
 
