--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -30,7 +30,7 @@
           %a(href="/imprint" title="View the imprint")
             Imprint
         %li
-          %a(href="http://2013.eurucamp.org/codeofconduct.html" title="Jump to eurucamp.org for our policies")
+          %a(href="http://2013.eurucamp.org/policies" title="Jump to eurucamp.org for our policies")
             Policies
         %li
           %a(href="http://2013.eurucamp.org/team.html" title="Jump to eurucamp.org for our team")
