Clarify 'Europeanness' of to last year's event
Signed-off-by: Alex Coles <alex@alexbcoles.com>

--- a/source/partials/_footer.html.haml
+++ b/source/partials/_footer.html.haml
@@ -37,4 +37,4 @@
             Team
         %li
           %a(href="http://2012.jrubyconf.eu" title="Last year's JRubyConf.eu")
-            JRubyConf 2012
+            JRubyConf.eu 2012
