--- a/source/stylesheets/partials/_speakers.sass
+++ b/source/stylesheets/partials/_speakers.sass
@@ -14,6 +14,26 @@
       margin: 2em 0
       letter-spacing: 0.09em
 
+      &.cfp
+        +clearfix
+
+        a:hover
+          span
+            border: 1px solid $red
+            background: $red
+            +transition(all 0.5s)
+
+        span
+          display: inline-block
+          height: 100px
+          width: 100px
+          line-height: 100px
+          border: 1px dashed $light-gray
+          border-radius: 75px
+          +custom-sans(regular)
+          +transition(all 0.5s)
+          margin: 0 0 1.5em 0
+
       a
         color: $gray
 
@@ -74,6 +94,12 @@
       li
         width: percentage(1/4)
 
+        &.cfp
+          span
+            width: 125px
+            height: 125px
+            line-height: 125px
+
         img
           width: 125px
 
@@ -83,13 +109,16 @@
       li
         width: percentage(1/5)
 
-        img
-          width: 125px
-
 
   +respond-to(desktop)
     ul
       li
+
+        &.cfp
+          span
+            width: 150px
+            height: 150px
+            line-height: 150px
 
         img
           width: 150px
