Manually importing favicons. Closes #20.

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,12 +8,12 @@
     %meta(content="" name="author")
     %meta(content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport")
 
-    %link(rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png")
-    %link(rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png")
-    %link(rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png")
-    %link(rel="apple-touch-icon" href="apple-touch-icon-precomposed.png")
-    %link(rel="shortcut icon" href="favicon.png")
-    %link(rel="icon" type="image/ico" href="favicon.ico")
+    %link(rel="apple-touch-icon" sizes="144x144" href="/images/apple-touch-icon-144x144-precomposed.png?v2")
+    %link(rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png?v2")
+    %link(rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png?v2")
+    %link(rel="apple-touch-icon" href="apple-touch-icon-precomposed.png?v2")
+    %link(rel="shortcut icon" href="favicon.png?v2")
+    %link(rel="icon" type="image/ico" href="favicon.ico?v2")
 
     = javascript_include_tag "vendor/modernizr-2.6.1.min"
     = stylesheet_link_tag "site"
