--- a/source/stylesheets/partials/_speakers.sass
+++ b/source/stylesheets/partials/_speakers.sass
@@ -19,16 +19,16 @@
 
         a:hover
           span
-            border: 1px solid $red
+            border: 2px solid $red
             background: $red
             +transition(all 0.5s)
 
         span
           display: inline-block
-          height: 100px
-          width: 100px
-          line-height: 100px
-          border: 1px dashed $light-gray
+          height: 96px
+          width: 96px
+          line-height: 96px
+          border: 2px dotted $light-gray
           border-radius: 75px
           +custom-sans(regular)
           +transition(all 0.5s)
@@ -96,9 +96,9 @@
 
         &.cfp
           span
-            width: 125px
-            height: 125px
-            line-height: 125px
+            width: 121px
+            height: 121px
+            line-height: 121px
 
         img
           width: 125px
@@ -116,9 +116,9 @@
 
         &.cfp
           span
-            width: 150px
-            height: 150px
-            line-height: 150px
+            width: 146px
+            height: 146px
+            line-height: 144px
 
         img
           width: 150px
