Eurucamp Week Bar.

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -25,6 +25,8 @@
     = partial 'partials/analytics'
 
   %body#top
+    %iframe#eurucamp-week-bar(src="//eurucamp-week-bar.herokuapp.com?group=jruby_conf" scrolling="no")
+
     #container
       = partial 'partials/header'
       #main(role="main")
