--- a/source/stylesheets/_base.sass
+++ b/source/stylesheets/_base.sass
@@ -1,6 +1,7 @@
 body
   +custom-serif
   color: $dark-gray
+  padding-top: 40px
 
 a
   color: $lighter-red
@@ -10,6 +11,16 @@ p
   font-size: 1.125em
   letter-spacing: 0.055em
   line-height: 1.5em
+
+#eurucamp-week-bar
+  width: 100%
+  height: 45px
+  background: transparent
+  border: none
+  overflow: hidden
+  position: fixed
+  top: 0
+  z-index: 9999
 
 button,
 .button
